<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingItem">

    <LinearLayout
        android:id="@+id/shopping_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/rice" />

        <Button
            android:id="@+id/item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/daal" />

        <Button
            android:id="@+id/item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/sugar" />

        <Button
            android:id="@+id/item_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/salt" />

        <Button
            android:id="@+id/item_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/cooking_oil" />

        <Button
            android:id="@+id/item_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/onion" />

        <Button
            android:id="@+id/item_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/banana" />

        <Button
            android:id="@+id/item_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/apple" />

        <Button
            android:id="@+id/item_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/cheese" />

        <Button
            android:id="@+id/item_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addItemToShoppingList"
            android:text="@string/coffee" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>